--- a/output/ras/Amite_2022/Amite_2022_ras_prj.yml
+++ b/output/ras/Amite_2022/Amite_2022_ras_prj.yml
@@ -11,7 +11,7 @@ Plans:
 - Plan 03
 - Plan 04
 - Isaac_all_AORC_Optimized
-Proj Title: Amite_2022
+Proj Title: Amite_2022 HEC-RAS Model
 Project File: Z:/Amite/Amite_LWI/Models/Amite_RAS/Amite_2022.prj
 application_date: '2023-02-15'
 coordinate_system: PROJCS["USA_Contiguous_Albers_Equal_Area_Conic_USGS_version",GEOGCS["NAD83",DATUM["North_American_Datum_1983",SPHEROID["GRS
