--- a/output/ras/Amite_2022/Amite_2022.p03.yml
+++ b/output/ras/Amite_2022/Amite_2022.p03.yml
@@ -102,7 +102,7 @@ Number of US XS's Weighted with DS Boundary: ' 1 '
 Output Increment Type: ' 1 '
 Output Interval: 1HOUR
 Percentile Method: ' 0 '
-Plan Title: Plan 03
+Plan Title: 'Amite_2022 HEC-RAS Model Simulation: Plan 03'
 Profile and TS Output Increment: ' 1 '
 Program Version: '6.10'
 Read Gradation Hotstart: ' 0 '
