--- a/output/ras/Amite_2022/Amite_2022.p07.yml
+++ b/output/ras/Amite_2022/Amite_2022.p07.yml
@@ -121,7 +121,7 @@ Number of US XS's Weighted with DS Boundary: ' 1 '
 Output Increment Type: ' 1 '
 Output Interval: 1HOUR
 Percentile Method: ' 0 '
-Plan Title: Isaac_all_AORC_Optimized
+Plan Title: 'Amite_2022 HEC-RAS Model Simulation: Isaac_all_AORC_Optimized'
 Profile and TS Output Increment: ' 1 '
 Program Version: '6.10'
 Read Gradation Hotstart: ' 0 '
