--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,5 +27,19 @@
                 
             ],
         },
+        {
+            "name": "Python: hms_parser.py",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "args": [
+                "--hms",
+                "Z:/Amite/Amite_LWI/Models/Amite_HMS/Amite_HMS.hms",
+                "--shp",
+                "Z:/GIS/Amite/Amite_Basin_Outline.geojson"
+            ],
+        },
     ]
 }
