bug fix in ras parser, hms parser still in dev

--- a/example/input/json/hms_model_application.json
+++ b/example/input/json/hms_model_application.json
@@ -58193,19 +58193,19 @@
             "title": "Project File"
         },
         {
-            "description": "There are multiple basins in the HMS model project",
+            "description": "There may be multiple basins in the HMS model project",
             "location": "/lwi-common/deliverables/Example/Amite_LWI/Models/Amite_HMS/*.basin",
             "source_dataset": null,
             "title": "Basin Files"
         },
         {
-            "description": "There are multiple Meteorological Models",
+            "description": "There may be multiple Meteorological Models",
             "location": "/lwi-common/deliverables/Example/Amite_LWI/Models/Amite_HMS/*.met",
             "source_dataset": null,
             "title": "Meteorological Model Files"
         },
         {
-            "description": "There are multiple control specifications.",
+            "description": "There may be multiple control specifications.",
             "location": "/lwi-common/deliverables/Example/Amite_LWI/Models/Amite_HMS/*.control",
             "source_dataset": null,
             "title": "Control Specification Files"
