--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -39,6 +39,8 @@
                 "Z:/Amite/Amite_LWI/Models/Amite_HMS/Amite_HMS.hms",
                 "--shp",
                 "Z:/GIS/Amite/Amite_Basin_Outline.geojson"
+                "--dss",
+                "Z:/Amite/Amite_LWI/Models/Amite_HMS/data"
             ],
         },
     ]
