Go-C Single Run sim completed

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,6 +19,10 @@
                 "Amite",
                 "--prj_description",
                 "Amite Go-Consequences Model Based on Dewberry Amite River HEC-RAS Model Results and USACE National Structure Inventory Data",
+                "--sim_name",
+                "Hurricane Ida 2021",
+                "--sim_description",
+                "Hurricane Ida 2021 Water Surface Elevation Results from Dewberry Amite River HEC-RAS Model with NSI Data",
                 "--prj_file",
                 "C:/py/hec_meta_extract/dev/go-consequences/main.go",
                 "--model_data_dir",
