--- a/example/input/json/fia_model_application_template.json
+++ b/example/input/json/fia_model_application_template.json
@@ -10,7 +10,7 @@
         "damages",
         "consequences"
     ],
-    "common_files_details": [
+    "common_input_files": [
         {
             "description": "AgricultureManager",
             "source_dataset": null,
