--- a/output/go-consequences/Amite/Amite_model_application.json
+++ b/output/go-consequences/Amite/Amite_model_application.json
@@ -1,1 +1,57 @@
-{"spatial_extent": "Testing", "keywords": ["go-consequences", "hazards", "consequence", "hec", "benefits", "damage", "model"], "title": "Go-Consequences Amite", "grid": {"dimension": "2D", "coordinate_system": "Testing", "shape": "rectangular", "description": "Based on HEC-RAS Water Surface Elevation Raster"}, "common_input_files": [{"description": "The project's Main Go-Consequences run script file", "location": "/go-consequences/main.go", "source_dataset": null, "title": "Project File"}, {"description": "There may be multiple Water Surface Elevation Rasters in the Go-Consequences data directory.", "location": ["/go-consequences/data/Amite_Gustav2008_AORC_ADCIRC_2022Geometry.tif", "/go-consequences/data/Amite_Katrina2005_AORC_ADCIRC_2021Geometry.tif", "/go-consequences/data/Amite_Isaac2012_AORC_ADCIRC_NoWind_2022Geometry.tif"], "source_dataset": "HEC-RAS", "title": "Hazard Layers as Water Surface Elevation Raster Files"}, {"description": "There may be multiple Structure Inventories in the Go-Consequences data directory.", "location": "/go-consequences/data/NSI.shp", "source_dataset": null, "title": "Structure Inventory Feature Layers"}], "common_output_files": [{"description": "There may be multiple Output Feature Layers.", "location": ["/go-consequences/output/Amite_Gustav2008_AORC_ADCIRC_2022Geometry_NSI.gpkg", "/go-consequences/output/Amite_Isaac2012_AORC_ADCIRC_NoWind_2022Geometry_NSI.gpkg", "/go-consequences/output/Amite_Katrina2005_AORC_ADCIRC_2021Geometry_NSI.gpkg"], "source_dataset": "Go-Consequences Output", "title": "Output Feature Layers"}], "description": "Description: Amite Go-Consequences Model Based on Dewberry Amite River HEC-RAS Model Results and USACE National Structure Inventory Data\n\nSimulations:\n\n\nKatrina (2005) - Amite LWI HEC-RAS Model results for Hurricane Katrina using AORC rainfall with Wind and Surge using an 8 segment downstream boundary informed by ADCIRC, and with upstream boundary conditions informed by HEC-HMS.\n\nThe structures inventory file is based on the USACE National Inventory Structures  (https://www.hec.usace.army.mil/confluence/nsi/userguides/download-tool \n\nAll data paths are relative to the LWI S3 bucket with the root path being: LWI/Models/Go-Consequences/Amite\n\n\nIssac (2012) - Amite LWI HEC-RAS Model results for Hurricane Isaac using AORC rainfall with Wind and Surge using an 8 segment downstream boundary informed by ADCIRC, and with upstream boundary conditions informed by HEC-HMS.\n\nThe structures inventory file is based on the USACE National Inventory Structures  (https://www.hec.usace.army.mil/confluence/nsi/userguides/download-tool \n\nAll data paths are relative to the LWI S3 bucket with the root path being: LWI/Models/Go-Consequences/Amite\n\n\nGustav (2008) - Amite LWI HEC-RAS Model results for Hurricane Gustav using AORC rainfall with Wind and Surge using an 8 segment downstream boundary informed by ADCIRC, and with upstream boundary conditions informed by HEC-HMS.\n\nThe structures inventory file is based on the USACE National Inventory Structures  (https://www.hec.usace.army.mil/confluence/nsi/userguides/download-tool \n\nAll data paths are relative to the LWI S3 bucket with the root path being: LWI/Models/Go-Consequences/Amite", "application_date": "2024-01-29"}
+{
+	"spatial_extent": "Testing",
+	"keywords": [
+		"go-consequences",
+		"hazards",
+		"consequence",
+		"hec",
+		"benefits",
+		"damage",
+		"model"
+	],
+	"title": "Go-Consequences Amite",
+	"grid": {
+		"dimension": "2D",
+		"coordinate_system": "Testing",
+		"shape": "rectangular",
+		"description": "Based on HEC-RAS Water Surface Elevation Raster"
+	},
+	"common_input_files": [
+		{
+			"description": "The project's Main Go-Consequences run script file",
+			"location": "/go-consequences/main.go",
+			"source_dataset": null,
+			"title": "Project File"
+		},
+		{
+			"description": "There may be multiple Water Surface Elevation Rasters in the Go-Consequences data directory.",
+			"location": [
+				"/go-consequences/data/Amite_Gustav2008_AORC_ADCIRC_2022Geometry.tif",
+				"/go-consequences/data/Amite_Katrina2005_AORC_ADCIRC_2021Geometry.tif",
+				"/go-consequences/data/Amite_Isaac2012_AORC_ADCIRC_NoWind_2022Geometry.tif"
+			],
+			"source_dataset": "HEC-RAS",
+			"title": "Hazard Layers as Water Surface Elevation Raster Files"
+		},
+		{
+			"description": "There may be multiple Structure Inventories in the Go-Consequences data directory.",
+			"location": "/go-consequences/data/NSI.shp",
+			"source_dataset": null,
+			"title": "Structure Inventory Feature Layers"
+		}
+	],
+	"common_output_files": [
+		{
+			"description": "There may be multiple Output Feature Layers.",
+			"location": [
+				"/go-consequences/output/Amite_Gustav2008_AORC_ADCIRC_2022Geometry_NSI.gpkg",
+				"/go-consequences/output/Amite_Isaac2012_AORC_ADCIRC_NoWind_2022Geometry_NSI.gpkg",
+				"/go-consequences/output/Amite_Katrina2005_AORC_ADCIRC_2021Geometry_NSI.gpkg"
+			],
+			"source_dataset": "Go-Consequences Output",
+			"title": "Output Feature Layers"
+		}
+	],
+	"description": "Description: Amite Go-Consequences Model Based on Dewberry Amite River HEC-RAS Model Results and USACE National Structure Inventory Data\n\nSimulations:\n\n\nKatrina (2005) - Amite LWI HEC-RAS Model results for Hurricane Katrina using AORC rainfall with Wind and Surge using an 8 segment downstream boundary informed by ADCIRC, and with upstream boundary conditions informed by HEC-HMS.\n\nThe structures inventory file is based on the USACE National Inventory Structures  (https://www.hec.usace.army.mil/confluence/nsi/userguides/download-tool \n\nAll data paths are relative to the LWI S3 bucket with the root path being: LWI/Models/Go-Consequences/Amite\n\n\nIssac (2012) - Amite LWI HEC-RAS Model results for Hurricane Isaac using AORC rainfall with Wind and Surge using an 8 segment downstream boundary informed by ADCIRC, and with upstream boundary conditions informed by HEC-HMS.\n\nThe structures inventory file is based on the USACE National Inventory Structures  (https://www.hec.usace.army.mil/confluence/nsi/userguides/download-tool \n\nAll data paths are relative to the LWI S3 bucket with the root path being: LWI/Models/Go-Consequences/Amite\n\n\nGustav (2008) - Amite LWI HEC-RAS Model results for Hurricane Gustav using AORC rainfall with Wind and Surge using an 8 segment downstream boundary informed by ADCIRC, and with upstream boundary conditions informed by HEC-HMS.\n\nThe structures inventory file is based on the USACE National Inventory Structures  (https://www.hec.usace.army.mil/confluence/nsi/userguides/download-tool \n\nAll data paths are relative to the LWI S3 bucket with the root path being: LWI/Models/Go-Consequences/Amite",
+	"application_date": "2024-01-29"
+}
