--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,14 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
+        {
+            "name": "current file",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}"
+            "console": "integratedTerminal",
+            "justMyCode": true, 
+        }
         {
             "name": "go-consequences_parser Single",
             "type": "python",
@@ -34,7 +41,11 @@
                 // "--inventory_layer",
                 // "C:/py/hec_meta_extract/dev/go-consequences/data/NSI.shp"
                 // "--results_layer",
-                // "C:/py/hec_meta_extract/dev/go-consequences/output/Amite_Isaac2012_AORC_ADCIRC_NoWind_2022Geometry_NSI.gpkg"               
+                // "C:/py/hec_meta_extract/dev/go-consequences/output/Amite_Isaac2012_AORC_ADCIRC_NoWind_2022Geometry_NSI.gpkg"
+                "--keywords",
+                "TWI, NPS",
+                "--id",
+                "P00710"               
             ],
         },
         {
@@ -58,7 +69,11 @@
                 "--model_out_dir",
                 "C:/py/hec_meta_extract/dev/go-consequences/output",                
                 "--run_table",
-                "C:/py/hec_meta_extract/example/input/go-consequences/run_table.csv"                
+                "C:/py/hec_meta_extract/example/input/go-consequences/run_table.csv",
+                "--keywords",
+                "TWI, NPS",
+                "--id",
+                "P00710"                
             ],
         },
         {
@@ -66,6 +81,7 @@
             "type": "python",
             "request": "launch",
             "program": "C:/py/hec_meta_extract/ras_parser.py",
+            // "program": "C:/py/EnDMC_Desktop/ras_parser.py",
             "console": "integratedTerminal",
             "justMyCode": true,
             "args": [
@@ -75,7 +91,12 @@
                 // "V:/projects/p00810_nps_2022_west_ig/02_analysis/WestPark_HMS/maps/WestPark_Boundary_3451.shp"
                 "V:/projects/p00813_nps_2023_greenbelt_ig/02_analysis/HEC-RAS_MainModel/Greenbelt_RAS.prj",
                 "--shp",
-                "V:/projects/p00813_nps_2023_greenbelt_ig/02_analysis/HEC-RAS_MainModel/Shapes/2DFlowArea.shp"
+                "V:/projects/p00813_nps_2023_greenbelt_ig/02_analysis/HEC-RAS_MainModel/Shapes/2DFlowArea.shp",
+                "--keywords",
+                "TWI, National Park Service",
+                // "TWI, NPS",
+                "--id",
+                "P00813"
                 
             ],
         },
@@ -92,7 +113,11 @@
                 "--shp",
                 "C:/py/WestPark_HMS/maps/WestPark_Boundary_3451.shp",
                 "--dss",
-                "C:/py/WestPark_HMS/data"
+                "C:/py/WestPark_HMS/data",
+                "--keywords",
+                "TWI, NPS",
+                "--id",
+                "P00810"
             ],
         },
         {
@@ -107,6 +132,10 @@
                 "Z:/LWI/FIA Darlington/AmiteWatershed_2016Event_WithDarlingtonReservoir/AmiteWatershed_2016Event.prj",
                 "--shp",
                 "Z:/LWI/FIA Darlington/AmiteWatershed_2016Event_WithDarlingtonReservoir/maps/AmiteHUC8_NAD83_Albers.shp",
+                "--keywords",
+                "TWI, NPS",
+                "--id",
+                "P00710"
             ],
         },
     ]
