Json formatting and ordering complete

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,9 +6,9 @@
     "configurations": [
         {
             "name": "current file",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
-            "program": "${file}"
+            "program": "${file}",
             "console": "integratedTerminal",
             "justMyCode": true, 
         }
